<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Campos do cliente -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cliente_nome" />

        <EditText
            android:id="@+id/etNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cliente_cpf" />

        <EditText
            android:id="@+id/etCpf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <!-- Espaçamento -->
        <View
            android:layout_width="match_parent"
            android:layout_height="16dp" />


        <!-- Campos do item -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_nome" />

        <EditText
            android:id="@+id/etItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_quantidade" />

        <EditText
            android:id="@+id/etQuantidade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_valor_unitario" />

        <EditText
            android:id="@+id/etValorUnitario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal" />

        <!-- Campo de parcelas -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parcelas" />

        <EditText
            android:id="@+id/etParcelas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />

        <!-- Botões -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="16dp">

        <Button
            android:id="@+id/btnAdicionar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_adicionar" />

        <Button
            android:id="@+id/btnConcluir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_concluir"
            android:layout_marginLeft="16dp"
            />
        </LinearLayout>

        <!-- Visualizações de texto -->
        <TextView
            android:id="@+id/tvLista"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lista_itens" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total" />

        <TextView
            android:id="@+id/tvTotalItens"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_itens" />

        <TextView
            android:id="@+id/tvParcelas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parcelas_texto" />

        <TextView
            android:id="@+id/tvValorTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/valor_total" />

        <!-- Spinner para condição de pagamento -->
        <Spinner
            android:id="@+id/spPagamento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>